[ref] OpenCV_Basics/03_image_transformation_operations.ipynb: Some of the basic and necessary Image transformations 	Add sec - Rotating an Image 		Add subsec - Flipping an Image 	Add sec - Perspective transformation of an Image

--- a/01_getting_started_with_images.ipynb
+++ b/01_getting_started_with_images.ipynb
@@ -124,7 +124,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Reading an Image"
+    "- ### Reading an Image"
    ]
   },
   {
@@ -180,7 +180,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- The dimensions of an Image"
+    "##### The dimensions of an Image"
    ]
   },
   {
@@ -212,7 +212,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Displaying an Image"
+    "- ### Displaying an Image"
    ]
   },
   {
@@ -220,7 +220,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- #### Using `cv.imshow(winname, mat)`"
+    "##### Using `cv.imshow(winname, mat)`"
    ]
   },
   {
@@ -252,7 +252,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- #### Using matplotlib"
+    "##### Using matplotlib"
    ]
   },
   {
@@ -331,7 +331,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Saving an Image"
+    "- ### Saving an Image"
    ]
   },
   {
