[ref] OpenCV_Basics/04_noise_in_image-smoothing_denoising, sharpening.ipynb: Introduction to removing noise from an image and Adding artificial noise to an image 	Add sec - Filtering an Image (removing noise from the image) 		Add subsec - smoothing or, blurring 		Add subsec - denoising 		Add subsec - sharpening

--- a/01_getting_started_with_images.ipynb
+++ b/01_getting_started_with_images.ipynb
@@ -147,7 +147,7 @@
    "source": [
     "img = cv.imread(\"cherry_blossom.jpeg\")\n",
     "\n",
-    "# print sys.exit statement if the image couldn't be read \n",
+    "# print sys.exit statement if the image couldn't be read\n",
     "# this is done as usually opencv will only give an warning and not an error\n",
     "\n",
     "if img is None:\n",
@@ -200,11 +200,11 @@
    ],
    "source": [
     "img_dim = img.shape\n",
-    "print(\"Height of the image is {} pixels.\\\n",
-    "      \\nWidth of the image is {} pixels.\\\n",
-    "      \\nAnd, depth of the image is {} which represents the no of color components in the color code.\"\n",
-    "      .format(img_dim[0], img_dim[1], img_dim[2])\n",
-    "      )"
+    "print(\n",
+    "    \"Height of the image is {} pixels.\\nWidth of the image is {} pixels.\\nAnd, depth of the image is {} which represents the no of color components in the color code.\".format(\n",
+    "        img_dim[0], img_dim[1], img_dim[2]\n",
+    "    )\n",
+    ")"
    ]
   },
   {
@@ -290,20 +290,21 @@
    "source": [
     "# converting color mode from BGR to RGB and displaying the image as matplotlib figure\n",
     "def matplotlib_imshow_bgr2rgb(img_title=\"\", mat_img=None, fig_h=7):\n",
-    "\n",
     "    # tinkering with size\n",
     "    try:\n",
     "        img_width, img_height = mat_img.shape[0], mat_img.shape[1]\n",
-    "        aspect_ratio = img_width/img_height\n",
-    "        plt.figure(figsize=(fig_h*aspect_ratio, fig_h))\n",
+    "        aspect_ratio = img_width / img_height\n",
+    "        plt.figure(figsize=(fig_h * aspect_ratio, fig_h))\n",
     "\n",
     "        # actual code for displaying the image\n",
     "        plt.imshow(cv.cvtColor(mat_img, cv.COLOR_BGR2RGB))\n",
     "        plt.title(img_title)\n",
     "        plt.show()\n",
-    "    \n",
+    "\n",
     "    except AttributeError:\n",
-    "        sys.exit(\"None Type image. Correct_syntax is, matplotlib_imshow_bgr2rgb(img_title, mat_img, fig_h).\")"
+    "        sys.exit(\n",
+    "            \"None Type image. Correct_syntax is, matplotlib_imshow_bgr2rgb(img_title, mat_img, fig_h).\"\n",
+    "        )"
    ]
   },
   {
@@ -323,7 +324,7 @@
     }
    ],
    "source": [
-    "matplotlib_imshow_bgr2rgb('cherry_blossom', img)"
+    "matplotlib_imshow_bgr2rgb(\"cherry_blossom\", img)"
    ]
   },
   {
@@ -367,7 +368,7 @@
    "source": [
     "# let's first convert the image to greyscale using color space conversion and then we will save it\n",
     "\n",
-    "img_grey = cv.cvtColor(img, cv.COLOR_BGR2GRAY) # no it's not wrong, grey is uk spelling\n",
+    "img_grey = cv.cvtColor(img, cv.COLOR_BGR2GRAY)  # no it's not wrong, grey is uk spelling\n",
     "cv.imwrite(\"cherry_blossom_grey.png\", img_grey)"
    ]
   },
