--- a/02_drawing_on_images.ipynb
+++ b/02_drawing_on_images.ipynb
@@ -38,20 +38,20 @@
    "source": [
     "# converting color mode from BGR to RGB and displaying the image as matplotlib figure\n",
     "def matplotlib_imshow_bgr2rgb(img_title=\"\", mat_img=None, fig_h=7):\n",
-    "\n",
     "    # tinkering with size\n",
     "    try:\n",
     "        img_width, img_height = mat_img.shape[0], mat_img.shape[1]\n",
-    "        aspect_ratio = img_width/img_height\n",
-    "        plt.figure(figsize=(fig_h*aspect_ratio, fig_h))\n",
+    "        aspect_ratio = img_width / img_height\n",
+    "        plt.figure(figsize=(fig_h * aspect_ratio, fig_h))\n",
     "    except AttributeError:\n",
-    "        print(\"None Type image. Correct_syntax is, matplotlib_imshow_bgr2rgb(img_title, mat_img, fig_h).\")\n",
+    "        print(\n",
+    "            \"None Type image. Correct_syntax is, matplotlib_imshow_bgr2rgb(img_title, mat_img, fig_h).\"\n",
+    "        )\n",
     "\n",
     "    # actual code for displaying the image\n",
     "    plt.imshow(cv.cvtColor(mat_img, cv.COLOR_BGR2RGB))\n",
     "    plt.title(img_title)\n",
-    "    plt.show()\n",
-    "    "
+    "    plt.show()"
    ]
   },
   {
@@ -198,7 +198,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "points = np.array([[50, 225], [75, 275], [250, 100], [75, 265]], np.int32).reshape(4, 1, 2)"
+    "points = np.array([[50, 225], [75, 275], [250, 100], [75, 265]], np.int32).reshape(\n",
+    "    4, 1, 2\n",
+    ")"
    ]
   },
   {
@@ -403,7 +405,16 @@
     }
    ],
    "source": [
-    "cv.putText(text_canvas, \"OpenCV\", (25, 75), cv.FONT_ITALIC, fontScale=2, color=(255, 255), thickness=2, lineType=cv.LINE_AA)\n",
+    "cv.putText(\n",
+    "    text_canvas,\n",
+    "    \"OpenCV\",\n",
+    "    (25, 75),\n",
+    "    cv.FONT_ITALIC,\n",
+    "    fontScale=2,\n",
+    "    color=(255, 255),\n",
+    "    thickness=2,\n",
+    "    lineType=cv.LINE_AA,\n",
+    ")\n",
     "matplotlib_imshow_bgr2rgb(\"Putting Text in an Image\", text_canvas, 3)"
    ]
   },
