[ref]OpenCV_Basics/05_thresholding.ipynb: thresholding - separating objects or region of interest from the background in an image 	Add sec - Global thresholding 	Add sec - Otsu's binarization 	Add sec - Adaptive thresholding 	Add sec - Sk-Image's 'skimage.filters.threshold_local()' function for Adaptive thresholding

--- a/01_getting_started_with_images.ipynb
+++ b/01_getting_started_with_images.ipynb
@@ -192,8 +192,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Height of the image is 810 pixels.      \n",
-      "Width of the image is 1080 pixels.      \n",
+      "Height of the image is 810 pixels.\n",
+      "Width of the image is 1080 pixels.\n",
       "And, depth of the image is 3 which represents the no of color components in the color code.\n"
      ]
     }
@@ -288,23 +288,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# converting color mode from BGR to RGB and displaying the image as matplotlib figure\n",
-    "def matplotlib_imshow_bgr2rgb(img_title=\"\", mat_img=None, fig_h=7):\n",
+    "# converting color mode to RGB and displaying the image as matplotlib figure\n",
+    "def matplotlib_imshow(\n",
+    "    img_title=\"\", img=None, fig_h=7, cv_colorspace_conversion_flag=cv.COLOR_BGR2RGB\n",
+    "):\n",
     "    # tinkering with size\n",
     "    try:\n",
-    "        img_width, img_height = mat_img.shape[0], mat_img.shape[1]\n",
+    "        img_width, img_height = img.shape[0], img.shape[1]\n",
     "        aspect_ratio = img_width / img_height\n",
     "        plt.figure(figsize=(fig_h * aspect_ratio, fig_h))\n",
-    "\n",
-    "        # actual code for displaying the image\n",
-    "        plt.imshow(cv.cvtColor(mat_img, cv.COLOR_BGR2RGB))\n",
-    "        plt.title(img_title)\n",
-    "        plt.show()\n",
-    "\n",
     "    except AttributeError:\n",
-    "        sys.exit(\n",
-    "            \"None Type image. Correct_syntax is, matplotlib_imshow_bgr2rgb(img_title, mat_img, fig_h).\"\n",
-    "        )"
+    "        print(\n",
+    "            \"None Type image. Correct_syntax is, matplotlib_imshow(img_title, img, fig_h, cv_colorspace_conversion_flag).\"\n",
+    "        )\n",
+    "\n",
+    "    # actual code for displaying the image\n",
+    "    plt.imshow(cv.cvtColor(img, cv_colorspace_conversion_flag))\n",
+    "    plt.title(img_title)\n",
+    "    plt.show()"
    ]
   },
   {
@@ -324,7 +325,7 @@
     }
    ],
    "source": [
-    "matplotlib_imshow_bgr2rgb(\"cherry_blossom\", img)"
+    "matplotlib_imshow(\"cherry_blossom\", img)"
    ]
   },
   {
