--- a/02_drawing_on_images.ipynb
+++ b/02_drawing_on_images.ipynb
@@ -36,20 +36,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# converting color mode from BGR to RGB and displaying the image as matplotlib figure\n",
-    "def matplotlib_imshow_bgr2rgb(img_title=\"\", mat_img=None, fig_h=7):\n",
+    "# converting color mode to RGB and displaying the image as matplotlib figure\n",
+    "def matplotlib_imshow(\n",
+    "    img_title=\"\", img=None, fig_h=7, cv_colorspace_conversion_flag=cv.COLOR_BGR2RGB\n",
+    "):\n",
     "    # tinkering with size\n",
     "    try:\n",
-    "        img_width, img_height = mat_img.shape[0], mat_img.shape[1]\n",
+    "        img_width, img_height = img.shape[0], img.shape[1]\n",
     "        aspect_ratio = img_width / img_height\n",
     "        plt.figure(figsize=(fig_h * aspect_ratio, fig_h))\n",
     "    except AttributeError:\n",
     "        print(\n",
-    "            \"None Type image. Correct_syntax is, matplotlib_imshow_bgr2rgb(img_title, mat_img, fig_h).\"\n",
+    "            \"None Type image. Correct_syntax is, matplotlib_imshow(img_title, img, fig_h, cv_colorspace_conversion_flag).\"\n",
     "        )\n",
     "\n",
     "    # actual code for displaying the image\n",
-    "    plt.imshow(cv.cvtColor(mat_img, cv.COLOR_BGR2RGB))\n",
+    "    plt.imshow(cv.cvtColor(img, cv_colorspace_conversion_flag))\n",
     "    plt.title(img_title)\n",
     "    plt.show()"
    ]
@@ -99,7 +101,7 @@
    ],
    "source": [
     "canvas = gray_canvas((300, 300), 75)\n",
-    "matplotlib_imshow_bgr2rgb(\"Gray Canvas\", canvas, 3)"
+    "matplotlib_imshow(\"Gray Canvas\", canvas, 3)"
    ]
   },
   {
@@ -156,7 +158,7 @@
    ],
    "source": [
     "cv.line(line_canvas, (100, 100), (200, 200), color=(255, 255), thickness=2)\n",
-    "matplotlib_imshow_bgr2rgb(\"Drawing Line\", line_canvas, 3)"
+    "matplotlib_imshow(\"Drawing Line\", line_canvas, 3)"
    ]
   },
   {
@@ -241,7 +243,7 @@
    ],
    "source": [
     "cv.polylines(poly_canvas, [points], isClosed=True, color=(255, 255), thickness=2)\n",
-    "matplotlib_imshow_bgr2rgb(\"Drawing Polygon\", poly_canvas, 3)"
+    "matplotlib_imshow(\"Drawing Polygon\", poly_canvas, 3)"
    ]
   },
   {
@@ -295,7 +297,7 @@
    ],
    "source": [
     "cv.rectangle(rectangle_canvas, (100, 100), (200, 200), color=(255, 255), thickness=-2)\n",
-    "matplotlib_imshow_bgr2rgb(\"Drawing Rectangle\", rectangle_canvas, 3)"
+    "matplotlib_imshow(\"Drawing Rectangle\", rectangle_canvas, 3)"
    ]
   },
   {
@@ -349,7 +351,7 @@
    ],
    "source": [
     "cv.circle(circle_canvas, (150, 150), 50, color=(255, 255), thickness=2)\n",
-    "matplotlib_imshow_bgr2rgb(\"Drawing Circle\", circle_canvas, 3)"
+    "matplotlib_imshow(\"Drawing Circle\", circle_canvas, 3)"
    ]
   },
   {
@@ -415,7 +417,7 @@
     "    thickness=2,\n",
     "    lineType=cv.LINE_AA,\n",
     ")\n",
-    "matplotlib_imshow_bgr2rgb(\"Putting Text in an Image\", text_canvas, 3)"
+    "matplotlib_imshow(\"Putting Text in an Image\", text_canvas, 3)"
    ]
   },
   {
