--- a/03_image_transformation_operations.ipynb
+++ b/03_image_transformation_operations.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,24 +32,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# converting color mode from BGR to RGB and displaying the image as matplotlib figure\n",
-    "def matplotlib_imshow_bgr2rgb(img_title=\"\", mat_img=None, fig_h=7):\n",
+    "# converting color mode to RGB and displaying the image as matplotlib figure\n",
+    "def matplotlib_imshow(\n",
+    "    img_title=\"\", img=None, fig_h=7, cv_colorspace_conversion_flag=cv.COLOR_BGR2RGB\n",
+    "):\n",
     "    # tinkering with size\n",
     "    try:\n",
-    "        img_width, img_height = mat_img.shape[0], mat_img.shape[1]\n",
+    "        img_width, img_height = img.shape[0], img.shape[1]\n",
     "        aspect_ratio = img_width / img_height\n",
     "        plt.figure(figsize=(fig_h * aspect_ratio, fig_h))\n",
     "    except AttributeError:\n",
     "        print(\n",
-    "            \"None Type image. Correct_syntax is, matplotlib_imshow_bgr2rgb(img_title, mat_img, fig_h).\"\n",
+    "            \"None Type image. Correct_syntax is, matplotlib_imshow(img_title, img, fig_h, cv_colorspace_conversion_flag).\"\n",
     "        )\n",
     "\n",
     "    # actual code for displaying the image\n",
-    "    plt.imshow(cv.cvtColor(mat_img, cv.COLOR_BGR2RGB))\n",
+    "    plt.imshow(cv.cvtColor(img, cv_colorspace_conversion_flag))\n",
     "    plt.title(img_title)\n",
     "    plt.show()"
    ]
@@ -64,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +90,7 @@
     }
    ],
    "source": [
-    "matplotlib_imshow_bgr2rgb(\"Happy Cat\", cat_img, 5)"
+    "matplotlib_imshow(\"Happy Cat\", cat_img, 5)"
    ]
   },
   {
@@ -163,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +194,7 @@
     }
    ],
    "source": [
-    "matplotlib_imshow_bgr2rgb(\"Rotated Happy Cat\", rotated_img, 3)"
+    "matplotlib_imshow(\"Rotated Happy Cat\", rotated_img, 3)"
    ]
   },
   {
@@ -235,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +253,7 @@
    ],
    "source": [
     "flipped_img = cv.flip(cat_img, 1)\n",
-    "matplotlib_imshow_bgr2rgb(\"Happy cat Flipped about y axes\", flipped_img, 5)"
+    "matplotlib_imshow(\"Happy cat Flipped about y axes\", flipped_img, 5)"
    ]
   },
   {
@@ -324,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -340,12 +342,12 @@
    ],
    "source": [
     "castle_img = cv.imread(\"castle.jpg\")\n",
-    "matplotlib_imshow_bgr2rgb(\"Castle (Original Image)\", castle_img, 10)"
+    "matplotlib_imshow(\"Castle (Original Image)\", castle_img, 10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +373,7 @@
     }
    ],
    "source": [
-    "matplotlib_imshow_bgr2rgb(\"Castle (50% Scaled Down)\", fifty_percent_castle_img, 10)"
+    "matplotlib_imshow(\"Castle (50% Scaled Down)\", fifty_percent_castle_img, 10)"
    ]
   },
   {
@@ -392,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -436,12 +438,12 @@
     "    color=(0, 255, 255),\n",
     "    thickness=5,\n",
     ")\n",
-    "matplotlib_imshow_bgr2rgb(\"Castle Image (Crop Box)\", crop_box, 10)"
+    "matplotlib_imshow(\"Castle Image (Crop Box)\", crop_box, 10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +466,7 @@
     "cropped_image = castle_img[\n",
     "    height_crop_start:height_crop_end, width_crop_start:width_crop_end\n",
     "]\n",
-    "matplotlib_imshow_bgr2rgb(\"Castle (Cropped Image)\", cropped_image, 5)"
+    "matplotlib_imshow(\"Castle (Cropped Image)\", cropped_image, 5)"
    ]
   },
   {
