--- a/04_noise_in_image--smoothing_denoising_sharpening.ipynb
+++ b/04_noise_in_image--smoothing_denoising_sharpening.ipynb
@@ -45,20 +45,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# converting color mode from BGR to RGB and displaying the image as matplotlib figure\n",
-    "def matplotlib_imshow_bgr2rgb(img_title=\"\", mat_img=None, fig_h=7):\n",
+    "# converting color mode to RGB and displaying the image as matplotlib figure\n",
+    "def matplotlib_imshow(\n",
+    "    img_title=\"\", img=None, fig_h=7, cv_colorspace_conversion_flag=cv.COLOR_BGR2RGB\n",
+    "):\n",
     "    # tinkering with size\n",
     "    try:\n",
-    "        img_width, img_height = mat_img.shape[0], mat_img.shape[1]\n",
+    "        img_width, img_height = img.shape[0], img.shape[1]\n",
     "        aspect_ratio = img_width / img_height\n",
     "        plt.figure(figsize=(fig_h * aspect_ratio, fig_h))\n",
     "    except AttributeError:\n",
     "        print(\n",
-    "            \"None Type image. Correct_syntax is, matplotlib_imshow_bgr2rgb(img_title, mat_img, fig_h).\"\n",
+    "            \"None Type image. Correct_syntax is, matplotlib_imshow(img_title, img, fig_h, cv_colorspace_conversion_flag).\"\n",
     "        )\n",
     "\n",
     "    # actual code for displaying the image\n",
-    "    plt.imshow(cv.cvtColor(mat_img, cv.COLOR_BGR2RGB))\n",
+    "    plt.imshow(cv.cvtColor(img, cv_colorspace_conversion_flag))\n",
     "    plt.title(img_title)\n",
     "    plt.show()"
    ]
@@ -323,7 +325,7 @@
    ],
    "source": [
     "# Original Image\n",
-    "matplotlib_imshow_bgr2rgb(\"Dog (Noisy Image)\", dog_noisy_img, 3)\n",
+    "matplotlib_imshow(\"Dog (Noisy Image)\", dog_noisy_img, 3)\n",
     "\n",
     "# Blurred Images\n",
     "fig, ((ax11, ax12), (ax21, ax22)) = plt.subplots(2, 2, sharex=True, sharey=True)\n",
@@ -464,7 +466,7 @@
    "source": [
     "# cv.fastNlMeansDenoising() used on the dog_noisy_img\n",
     "denoise_gray = cv.fastNlMeansDenoising(dog_noisy_img, 7, 21, 7)\n",
-    "matplotlib_imshow_bgr2rgb(\n",
+    "matplotlib_imshow(\n",
     "    \"Dog (Denoised with cv.fastNlMeansDenoising technique)\", denoise_gray, 4\n",
     ")"
    ]
@@ -530,9 +532,7 @@
     }
    ],
    "source": [
-    "matplotlib_imshow_bgr2rgb(\n",
-    "    \"Dog (Sharpened the Denoised Image)\", denoised_dog_sharpened, 5\n",
-    ")"
+    "matplotlib_imshow(\"Dog (Sharpened the Denoised Image)\", denoised_dog_sharpened, 5)"
    ]
   },
   {
@@ -619,7 +619,7 @@
    ],
    "source": [
     "cat_img = cv.imread(\"cat.jpeg\")\n",
-    "matplotlib_imshow_bgr2rgb(\"Happy Cat\", cat_img, 7)"
+    "matplotlib_imshow(\"Happy Cat\", cat_img, 7)"
    ]
   },
   {
@@ -680,9 +680,7 @@
     }
    ],
    "source": [
-    "matplotlib_imshow_bgr2rgb(\n",
-    "    \"Introduced Gaussian Noise to the Cat Image\", cat_noised_img, 5\n",
-    ")"
+    "matplotlib_imshow(\"Introduced Gaussian Noise to the Cat Image\", cat_noised_img, 5)"
    ]
   },
   {
