[refactor] Moved all the images from ./ to ./imgs/ and edited all the .ipynb files to reflect this change

--- a/01_getting_started_with_images.ipynb
+++ b/01_getting_started_with_images.ipynb
@@ -50,7 +50,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"rgb_color_model.png\" height=300 width=600>"
+    "<img src=\"./imgs/rgb_color_model.png\" height=300 width=600>"
    ]
   },
   {
@@ -74,7 +74,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"how_computer_sees_an_image.png\" height=250 width=500> <img src='https://raw.githubusercontent.com/rajeevratan84/ModernComputerVision/main/array.png?token=ADLZD2HNEL33JAKTYRM3B5C7WMIV4' height=250 width=350>"
+    "<img src=\"./imgs/how_computer_sees_an_image.png\" height=250 width=500> <img src='https://raw.githubusercontent.com/rajeevratan84/ModernComputerVision/main/array.png?token=ADLZD2HNEL33JAKTYRM3B5C7WMIV4' height=250 width=350>"
    ]
   },
   {
@@ -145,7 +145,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img = cv.imread(\"cherry_blossom.jpeg\")\n",
+    "img = cv.imread(\"./imgs/cherry_blossom.jpeg\")\n",
     "\n",
     "# print sys.exit statement if the image couldn't be read\n",
     "# this is done as usually opencv will only give an warning and not an error\n",
@@ -244,7 +244,7 @@
     "\n",
     "# # to save the image in a new file if user input is \"s\"\n",
     "# if k == ord(\"s\"):\n",
-    "#     cv.imwrite(\"starry_night.png\", img)"
+    "#     cv.imwrite(\"./imgs/starry_night.png\", img)"
    ]
   },
   {
@@ -271,7 +271,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There is a little caveat though. Matplotlib uses RGB color model whereas, opencv uses BGR. So, first we will need to convert the color model of the 'mat' to RGB."
+    "There is a little caveat though. OpenCV uses BGR color model. And Matplotlib reflects this in its output. So, first we will need to convert the color model of the 'mat' to RGB in order to properly display it using matplotlib."
    ]
   },
   {
@@ -370,7 +370,7 @@
     "# let's first convert the image to greyscale using color space conversion and then we will save it\n",
     "\n",
     "img_grey = cv.cvtColor(img, cv.COLOR_BGR2GRAY)  # no it's not wrong, grey is uk spelling\n",
-    "cv.imwrite(\"cherry_blossom_grey.png\", img_grey)"
+    "cv.imwrite(\"./imgs/cherry_blossom_grey.png\", img_grey)"
    ]
   },
   {
