--- a/03_image_transformation_operations.ipynb
+++ b/03_image_transformation_operations.ipynb
@@ -70,7 +70,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cat_img = cv.imread(\"cat.jpeg\")"
+    "cat_img = cv.imread(\"./imgs/cat.jpeg\")"
    ]
   },
   {
@@ -341,7 +341,7 @@
     }
    ],
    "source": [
-    "castle_img = cv.imread(\"castle.jpg\")\n",
+    "castle_img = cv.imread(\"./imgs/castle.jpg\")\n",
     "matplotlib_imshow(\"Castle (Original Image)\", castle_img, 10)"
    ]
   },
