--- a/04_noise_in_image--smoothing_denoising_sharpening.ipynb
+++ b/04_noise_in_image--smoothing_denoising_sharpening.ipynb
@@ -116,7 +116,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"convolution-operation-example.png\" width=400 height=200> "
+    "<img src=\"./imgs/convolution-operation-example.png\" width=400 height=200> "
    ]
   },
   {
@@ -194,7 +194,7 @@
    "source": [
     "# reading in a noisy image\n",
     "dog_noisy_img = cv.imread(\n",
-    "    \"dog_noisy_img.png\", 0\n",
+    "    \"./imgs/dog_noisy_img.png\", 0\n",
     ")  # reading mode is 0 i.e, image will be read as grayscale"
    ]
   },
@@ -618,7 +618,7 @@
     }
    ],
    "source": [
-    "cat_img = cv.imread(\"cat.jpeg\")\n",
+    "cat_img = cv.imread(\"./imgs/cat.jpeg\")\n",
     "matplotlib_imshow(\"Happy Cat\", cat_img, 7)"
    ]
   },
