--- a/05_thresholding.ipynb
+++ b/05_thresholding.ipynb
@@ -145,7 +145,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"basic_thresholding_applied.png\">"
+    "<img src=\"./imgs/basic_thresholding_applied.png\">"
    ]
   },
   {
@@ -189,7 +189,9 @@
    "outputs": [],
    "source": [
     "# load the source image\n",
-    "scan_img = cv.imread(\"scan.jpeg\", cv.IMREAD_GRAYSCALE)  # or, cv.imread(\"scan.jpeg\", 0)"
+    "scan_img = cv.imread(\n",
+    "    \"./imgs/scan.jpeg\", cv.IMREAD_GRAYSCALE\n",
+    ")  # or, cv.imread(\"./imgs/scan.jpeg\", 0)"
    ]
   },
   {
@@ -381,7 +383,7 @@
     "\n",
     "The HSV colorspace has 3 components. `Hue: 0 - 179, Saturation: 0 - 255, Value (Intensity): 0 - 255`.\n",
     "\n",
-    "<img src=\"hsv_color_space.png\" height=300 width=500)>\n",
+    "<img src=\"./imgs/hsv_color_space.png\" height=300 width=500)>\n",
     "\n",
     "When we convert an Image to the HSV color space, the 'ndarray' it returns is of the shape (width, height, 3) i.e, it contains 3 separate color channels, one for each of H,S and V component. So, we need to split the 3 channel HSV image array into separate H, S, V channels and pass the V component as the argument of 'image'. "
    ]
@@ -393,7 +395,7 @@
    "outputs": [],
    "source": [
     "# reading in image\n",
-    "scan_img_color = cv.imread(\"scan.jpeg\")\n",
+    "scan_img_color = cv.imread(\"./imgs/scan.jpeg\")\n",
     "# applying gaussian blur\n",
     "scan_img_color_blur = cv.GaussianBlur(scan_img_color, (5, 5), 0.2, 0.1)"
    ]
