--- a/06_morphological_transformations_and_edge_detection.ipynb
+++ b/06_morphological_transformations_and_edge_detection.ipynb
@@ -77,7 +77,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"abstract_black_and_white_noise.png\">"
+    "<img src=\"./imgs/abstract_black_and_white_noise.png\">"
    ]
   },
   {
@@ -94,7 +94,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "abstract_noise_img = cv.imread(\"abstract_black_and_white_noise.png\", 0)"
+    "abstract_noise_img = cv.imread(\"./imgs/abstract_black_and_white_noise.png\", 0)"
    ]
   },
   {
@@ -406,7 +406,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"sobel_edge_detection.jpeg\">"
+    "<img src=\"./imgs/sobel_edge_detection.jpeg\">"
    ]
   },
   {
@@ -452,7 +452,7 @@
    "outputs": [],
    "source": [
     "# Example of using canny edge detection\n",
-    "dog_img = cv.imread(\"dog_noisy_img.png\", 0)\n",
+    "dog_img = cv.imread(\"./imgs/dog_noisy_img.png\", 0)\n",
     "dog_img_blurred = cv.GaussianBlur(dog_img, (5, 5), sigmaX=0)"
    ]
   },
@@ -473,7 +473,7 @@
     {
      "data": {
       "text/plain": [
-       "(<matplotlib.image.AxesImage at 0x7ffaf7b78350>,\n",
+       "(<matplotlib.image.AxesImage at 0x7f4f17a11190>,\n",
        " Text(0.5, 1.0, 'Dog Image (Edges)'))"
       ]
      },
