[rename] 03_image_transformation_operations.ipynb -> 03_rotating_flipping_resizing_and_cropping.ipynb [rename] 04_noise_in_image--smoothing_denoising_sharpening.ipynb -> 04_noise_in_images.ipynb [rename] 06_morphological_transformations_and_edge_detection.ipynb -> 06_morphological_transformations.ipynb [sec] 07_contours.ipynb: Add section - Canny Edge Detection, Add section - Features of Contours (Moment, Area, Centroid)

--- a/01_getting_started_with_images.ipynb
+++ b/01_getting_started_with_images.ipynb
@@ -66,7 +66,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`Grayscale` images are usually 8 bits, with 0 representing pure black and 255 representing pure white. The values in between represents some shade of gray. *There are some functions and libraries that only takes grayscale images.*"
+    "`Grayscale images are usually 8 bits`, with **0 representing pure black and 255 representing pure white.** The values in between represents some shade of gray. *There are some functions and libraries that only takes grayscale images.*"
    ]
   },
   {
@@ -261,9 +261,10 @@
    "metadata": {},
    "source": [
     "Usually using cv.imshow() is not the way we will go. We will use matplotlib to show images inline. This is for a number of reasons.\n",
-    "1. it creates a new window for each image to be shown\n",
+    "1. cv.imshow() creates a new window for each image to be shown\n",
     "2. these instances are usually resource hungry\n",
-    "3. most of the times, when we are using notebooks instead of python scripts, we want to see the image inline. "
+    "3. most of the times, when we are using notebooks instead of python scripts, we want to see the image inline.\n",
+    "4. also, with matplotlib we can plot multiple images as different axes in the same figure. "
    ]
   },
   {
