--- a/03_rotating_flipping_resizing_and_cropping.ipynb
+++ b/03_rotating_flipping_resizing_and_cropping.ipynb
@@ -122,7 +122,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The modified transformation matrix is given by, <img src=\"get_rotation_matrix_2D.png\">"
+    "The modified transformation matrix is given by, <img src=\"./imgs/get_rotation_matrix_2D.png\">"
    ]
   },
   {
@@ -293,7 +293,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since an image is essentially a numpy array, when we resize an image the 'resize' function needs to interpolate data for all the points in the new image from the sources image.\n",
+    "*Since an image is essentially a numpy array, when we resize an image the 'resize' function needs to interpolate data for all the points in the new image from the sources image.*\n",
     "\n",
     "- Different interpolation methods are available [(see this list)](https://docs.opencv.org/3.4/da/d54/group__imgproc__transform.html#ga5bb5a1fea74ea38e1a5445ca803ff121). Preferable interpolation methods are, \n",
     "    - *cv.INTER_AREA* for shrinking \n",
@@ -318,7 +318,7 @@
     "\n",
     "<u>Function Parameters</u>\n",
     "- src: input image\n",
-    "- dsize: output image size in the form of (width, height)\n",
+    "- dsize: output image size in the form of (width, height). For scaling purpose use, 'dsize=None'\n",
     "- fx: scaling factor along the horizontal axis\n",
     "- fy: scaling factor along the vertical axis\n",
     "- interpolation: interpolation flags"
@@ -389,7 +389,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Image cropping is done **by slicing out the image array.**"
+    "Image cropping is done **by slicing out the image array.**\n",
+    "\n",
+    "**`Note:`**\n",
+    "- pixels along the width of an image (along the x axis) are stored as columns in the array\n",
+    "- pixels along the height of an image (along the y axis) are stored as rows in the array"
    ]
   },
   {
@@ -458,10 +462,7 @@
     }
    ],
    "source": [
-    "# image cropping\n",
-    "\n",
-    "# rows are along the height\n",
-    "# cols are along the width\n",
+    "# image cropping: ndarray[rows, cols]\n",
     "\n",
     "cropped_image = castle_img[\n",
     "    height_crop_start:height_crop_end, width_crop_start:width_crop_end\n",
