[rename] 01_getting_started_with_images.ipynb -> 00_getting_started_with_images.ipynb [rename] 06_morphological_transformations.ipynb -> 05_morphological_transformations.ipynb [rename] 05_thresholding.ipynb -> 06_thresholding.ipynb [move_content] 08_contours_introduction.ipynb: 	-> 08_finding_and_drawing_contours.ipynb 	-> 09_contour_features.ipynb 	-> 10_contour_approximation_convex_hull_and_matching_shapes.ipynb [ref] funcs.py: some useful functions to be used throughout the repo

--- a/00_getting_started_with_images.ipynb
+++ b/00_getting_started_with_images.ipynb
@@ -264,7 +264,7 @@
     "1. cv.imshow() creates a new window for each image to be shown\n",
     "2. these instances are usually resource hungry\n",
     "3. most of the times, when we are using notebooks instead of python scripts, we want to see the image inline.\n",
-    "4. also, with matplotlib we can plot multiple images as different axes in the same figure. "
+    "4. also, with matplotlib we can plot multiple images as different axes (subplots) in the same figure. "
    ]
   },
   {
@@ -281,6 +281,14 @@
    "metadata": {},
    "source": [
     "For **`color space conversion`**, we can use `cv.cvtColor(input_image, flag)` where, `flag` determines the type of conversion (depending on the defined color space conversion code). See [Color Space Conversion Codes](https://docs.opencv.org/3.4/d8/d01/group__imgproc__color__conversions.html#ga4e0972be5de079fed4e3a10e24ef5ef0)."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**`->`** Here is a custom function to show images with matplotlib. The main function doing the plotting is, `plt.imshow()`. This function just wraps some other operations around it."
    ]
   },
   {
