--- a/04_noise_in_images.ipynb
+++ b/04_noise_in_images.ipynb
@@ -45,27 +45,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# converting color mode to RGB and displaying the image as matplotlib figure\n",
-    "def matplotlib_imshow(\n",
-    "    img_title=\"\", img=None, fig_h=7, cv_colorspace_conversion_flag=cv.COLOR_BGR2RGB\n",
-    "):\n",
-    "    # tinkering with size\n",
-    "    try:\n",
-    "        img_width, img_height = img.shape[0], img.shape[1]\n",
-    "        aspect_ratio = img_width / img_height\n",
-    "        plt.figure(figsize=(fig_h * aspect_ratio, fig_h))\n",
-    "    except AttributeError:\n",
-    "        print(\n",
-    "            \"None Type image. Correct_syntax is, matplotlib_imshow(img_title, img, fig_h, cv_colorspace_conversion_flag).\"\n",
-    "        )\n",
-    "\n",
-    "    # actual code for displaying the image\n",
-    "    plt.imshow(cv.cvtColor(img, cv_colorspace_conversion_flag))\n",
-    "    plt.title(img_title)\n",
-    "    plt.show()"
+    "from funcs import matplotlib_imshow"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -73,6 +57,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -80,6 +65,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -87,6 +73,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -94,6 +81,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -101,6 +89,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -167,6 +156,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -615,7 +605,6 @@
     }
    ],
    "source": [
-    "\n",
     "matplotlib_imshow(\n",
     "    \"Dog (Denoised with cv.fastNlMeansDenoising technique)\", denoise_gray, 4\n",
     ")"
