--- a/02_drawing_on_images.ipynb
+++ b/02_drawing_on_images.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,28 +32,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# converting color mode to RGB and displaying the image as matplotlib figure\n",
-    "def matplotlib_imshow(\n",
-    "    img_title=\"\", img=None, fig_h=7, cv_colorspace_conversion_flag=cv.COLOR_BGR2RGB\n",
-    "):\n",
-    "    # tinkering with size\n",
-    "    try:\n",
-    "        img_width, img_height = img.shape[0], img.shape[1]\n",
-    "        aspect_ratio = img_width / img_height\n",
-    "        plt.figure(figsize=(fig_h * aspect_ratio, fig_h))\n",
-    "    except AttributeError:\n",
-    "        print(\n",
-    "            \"None Type image. Correct_syntax is, matplotlib_imshow(img_title, img, fig_h, cv_colorspace_conversion_flag).\"\n",
-    "        )\n",
-    "\n",
-    "    # actual code for displaying the image\n",
-    "    plt.imshow(cv.cvtColor(img, cv_colorspace_conversion_flag))\n",
-    "    plt.title(img_title)\n",
-    "    plt.show()"
+    "from funcs import matplotlib_imshow"
    ]
   },
   {
@@ -74,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -182,12 +165,12 @@
     "\n",
     "<u>Some things to know:</u>\n",
     "- This operation changes the original image inplace. If you don't want that, then use copy.deepcopy(img) function to copy your image beforehand.\n",
-    "- *The points array needs to be reshaped as **(4, 1, 2)***"
+    "- *The points array needs to be reshaped as **(nrows, 1, 2)***"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +199,7 @@
        "(4, 1, 2)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
