--- a/05_morphological_transformations.ipynb
+++ b/05_morphological_transformations.ipynb
@@ -36,24 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# converting color mode to RGB and displaying the image as matplotlib figure\n",
-    "def matplotlib_imshow(\n",
-    "    img_title=\"\", img=None, fig_h=7, cv_colorspace_conversion_flag=cv.COLOR_BGR2RGB\n",
-    "):\n",
-    "    # tinkering with size\n",
-    "    try:\n",
-    "        img_width, img_height = img.shape[0], img.shape[1]\n",
-    "        aspect_ratio = img_width / img_height\n",
-    "        plt.figure(figsize=(fig_h * aspect_ratio, fig_h))\n",
-    "    except AttributeError:\n",
-    "        print(\n",
-    "            \"None Type image. Correct_syntax is, matplotlib_imshow(img_title, img, fig_h, cv_colorspace_conversion_flag).\"\n",
-    "        )\n",
-    "\n",
-    "    # actual code for displaying the image\n",
-    "    plt.imshow(cv.cvtColor(img, cv_colorspace_conversion_flag))\n",
-    "    plt.title(img_title)\n",
-    "    plt.show()"
+    "from funcs import matplotlib_imshow"
    ]
   },
   {
@@ -85,7 +68,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**`Note:`** OpenCv treats the white pixels as the object and not the dark ones. So, when we refer to objects we are referring to the white pixels in the image."
+    "**`Note:`** OpenCv treats the white pixels as the object and the dark ones as background. So, when we refer to objects we are referring to the white pixels in the image."
    ]
   },
   {
